<?xml version="1.0"?>
<!-- Place this in: ~/catkin_ws/src/wall_scanner/package.xml -->
<package format="2">
  <name>wall_scanner</name>
  <version>1.0.0</version>
  <description>Wall Scanner ROS Package for detecting wires, pipes, and studs</description>

  <maintainer email="user@example.com">Wall Scanner Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>